feat: route to return all grades of previous tests
